--- a/Hackathon-Googlee/Hackathon-Googlee/Base.lproj/Main.storyboard
+++ b/Hackathon-Googlee/Hackathon-Googlee/Base.lproj/Main.storyboard
@@ -246,7 +246,7 @@
             <objects>
                 <navigationController storyboardIdentifier="MainViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="dKZ-D7-8J8" sceneMemberID="viewController">
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="KRQ-9X-fkq">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="KRQ-9X-fkq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.31372549019607843" green="0.65098039215686276" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
@@ -768,7 +768,7 @@
                                     <outlet property="delegate" destination="Fj8-5b-jEt" id="DKE-QY-y0b"/>
                                 </connections>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="56a-c1-vK4">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="56a-c1-vK4">
                                 <color key="backgroundColor" red="0.31372549020000001" green="0.65098039220000004" blue="0.59607843140000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Chọn ảnh (nếu có)">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
